Remove create endpoint for VasItem
